Fixed spacing around the map & list buttons - IE7 fixes
git-svn-id: http://ala-hubs.googlecode.com/svn/branches/bio_hubs_webapp@299 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/button.css
+++ b/src/main/webapp/css/button.css
@@ -53,7 +53,7 @@ button.rounded {
 }
 
 *+html button.rounded {
-    padding: 0 2px 0 0;
+    padding: 0 4px 0 0;
 }
 
 button.rounded span {
@@ -67,7 +67,7 @@ button.rounded span {
 }
 
 *+html button.rounded span {
-    padding: 4px 0 5px 0px;
+    padding: 4px 0 5px 6px;
 }
 
 button.rounded:hover {
